[project]
name = "pfgen-plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipdb>=0.13.13",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
]
